Agregar botón Especialidades a páginas restantes

--- a/cardiologia_algoritmo_completo1.html
+++ b/cardiologia_algoritmo_completo1.html
@@ -682,6 +682,10 @@
                             <div class="flex gap-2">
                                 <button class="filter-button active" data-filter="all">Todos</button>
                                 <button class="filter-button" data-filter="critical">Críticas</button>
+                                <button class="filter-button px-3 py-1 rounded-lg text-xs transition-colors bg-purple-500/30 text-purple-200 border border-purple-400/30 hover:bg-purple-500/40" data-filter="specialties">
+                                    <i class="fas fa-th w-3 h-3 mr-1"></i>
+                                    Especialidades
+                                </button>
                                 <button class="filter-button" data-filter="completed">Completados</button>
                             </div>
                         </div>
