--- a/endocrinology_exam.html
+++ b/endocrinology_exam.html
@@ -355,6 +355,10 @@
                                     <i class="fas fa-th w-3 h-3 mr-1"></i>
                                     Especialidades
                                 </button>
+                                <button class="filter-button px-3 py-1 rounded-lg text-xs transition-colors bg-purple-500/30 text-purple-200 border border-purple-400/30 hover:bg-purple-500/40" data-filter="specialties">
+                                    <i class="fas fa-th w-3 h-3 mr-1"></i>
+                                    Especialidades
+                                </button>
                             </div>
                         </div>
                     </div>
