--- a/psychiatric_exam_system.html
+++ b/psychiatric_exam_system.html
@@ -422,6 +422,10 @@
                             <div class="flex gap-2">
                                 <button class="filter-button active px-3 py-1 rounded-lg text-xs transition-colors bg-blue-500/30 text-blue-200 border border-blue-400/30" data-filter="all">Todos</button>
                                 <button class="filter-button px-3 py-1 rounded-lg text-xs transition-colors bg-white/10 text-white/60 border border-white/20 hover:bg-white/20" data-filter="critical">Críticas</button>
+                                <button class="filter-button px-3 py-1 rounded-lg text-xs transition-colors bg-purple-500/30 text-purple-200 border border-purple-400/30 hover:bg-purple-500/40" data-filter="specialties">
+                                    <i class="fas fa-th w-3 h-3 mr-1"></i>
+                                    Especialidades
+                                </button>
                             </div>
                         </div>
                     </div>
