Corregir enlace de urología correctamente

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="urology_exam (1).html" class="block w-full h-full absolute top-0 left-0"></a>
+                        <a href="urology_exam.html" class="block w-full h-full absolute top-0 left-0"></a>
                     </div>
 
                     <!-- Examen Geriátrico -->
